--- a/LLForm.html
+++ b/LLForm.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-    	<title>Confirm Page</title>
+    	<title>LL form</title>
         <link rel = "stylesheet" type="text/css" href ="./styles/bootstrap.min.css" />
     </head>
     <body>
@@ -91,6 +91,19 @@
                                 <input type="text" class="form-control" name="name" id="name"/>
                             </div>
                         </div>
+                    </div>
+                    <!--This is for displaying captcha-->
+                    <div class="form-group">
+                        <p>
+                            <img src="/captcha.php" width="120" height="30" border="1" alt="CAPTCHA">
+                        </p> 
+                        <p>
+                            <input type="text" size="6" maxlength="5" name="captcha" value="">
+                            <br> 
+                            <small>
+                                copy the digits from the image into this box
+                            </small>
+                        </p>
                     </div>
                 </div>
             </form>
