deleted favicon and made changes to index

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <head>
 	<link rel="stylesheet" type="text/css" href="./styles/bootstrap.min.css">
 	<link rel="stylesheet" type="text/css" href="./styles/indexstyle.css">
-	<title>RTO Database project</title>
+	<title>ONLINE RTO Database project</title>
 </head>
 <body>
 	<!--This section is for navbar-->
