--- a/SignInDashboard.html
+++ b/SignInDashboard.html
@@ -1,16 +1,30 @@
 <html>
 <head>
 	<link rel="stylesheet" type="text/css" href="./styles/bootstrap.min.css">
-	<title>Check Application Status</title>
+	<title>RTO Officer SignIn Dashboard</title>
 </head>
 <body>
 	<!--This section is for navbar-->
 
-	<!--This section is for main-->
-	<div class="container">
-		<div class="jumbotron">
-			Review applications
+	<!--This section is for heading(Better display officers name)-->
+	<header>
+		<div class="container">
+			<div class="jumbotron">
+				<h2>Welcome officer</h2>
+			</div>
 		</div>
+	</header>
+	
+	<div class="container">
+		<h2>Conduct test for </h2>
+		<a href=""><h3>Learning license</h3></a>
+		<a href=""><h3>Driving license</h3></a>
+		<a href=""><h3>Renewal of license</h3></a>
+	</div>
+	<div class="container">
+		<h2>Conduct checking for</h2>
+		<a href=""><h3>New vehicle Registration</h3></a>
+		<a href=""><h3>Old vehicle Registration renewal</h3></a>
 	</div>
 
 	<script src='./scripts/jquery-2.1.4.min.js'></script>
