Edited names of html files

--- a/LHowto.html
+++ b/LHowto.html
@@ -35,8 +35,8 @@
 	<!--This section is for main-->
 
 	<div class="container">
-    <h2>License Applications <small>Frequently Asked Questions</small></h2>
-    <p class="lead">Looking for vehicle registration issues. You can check the FAQ <a href="./RegistrationFAQ.html">here</a></p>
+    <h2>License Applications <small>How tos</small></h2>
+    <p class="lead">Looking for vehicle registration issues. You can check the FAQ <a href="./RegHowto.html">here</a></p>
     <div class="row">
         <div class="col-sm-3">
             <a href="#" class="nav-tabs-dropdown btn btn-block btn-primary">Tabs</a>
