--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 		<div class="collapse navbar-collapse navbar-ex1-collapse">
 			<ul class="nav navbar-nav">
 				<li class="active"><a href="./TrackVehicle.html">Find Vehicle Details</a></li>
-				<li><a href="./LicenseFAQ.html">How to apply</a></li>
+				<li><a href="./LHowto.html">How to apply</a></li>
 			</ul>
 			<ul class="nav navbar-nav navbar-right">
 				<li><a href="./SignIn.html">SignIn</a></li>
