--- a/RegHowto.html
+++ b/RegHowto.html
@@ -37,7 +37,7 @@
 
 	<div class="container">
     <h2>Vehicle Registrations <small>Frequently Asked Questions</small></h2>
-    <p class="lead">Looking for Licence applications issues. You can check the FAQ <a href="./LicenseFAQ.html">here</a></p>
+    <p class="lead">Looking for Licence applications issues. You can check the FAQ <a href="./LHowto.html">here</a></p>
     <div class="row">
         <div class="col-sm-3">
             <a href="#" class="nav-tabs-dropdown btn btn-block btn-primary">Tabs</a>
