--- a/RegHowto.html
+++ b/RegHowto.html
@@ -28,7 +28,6 @@
 	      
 	});
 	</script>
-
 </head>
 <body>
 	<!--This section is for navbar-->
@@ -36,8 +35,9 @@
 	<!--This section is for main-->
 
 	<div class="container">
-    <h2>Vehicle Registrations <small>Frequently Asked Questions</small></h2>
+    <h2>Vehicle Registrations <small>How-tos</small></h2>
     <p class="lead">Looking for Licence applications issues. You can check the FAQ <a href="./LHowto.html">here</a></p>
+    <!--This contains info-->
     <div class="row">
         <div class="col-sm-3">
             <a href="#" class="nav-tabs-dropdown btn btn-block btn-primary">Tabs</a>
@@ -50,7 +50,7 @@
         <div class="col-sm-9">
             <div class="tab-content">
                 <div role="tabpanel" class="tab-pane fade in active" id="vtab1">
-                    <h3>Tab 1</h3>
+                    <h3>Agency Registration</h3>
                     <p>Place a link with the class <code>.nav-tabs-dropdown.btn.btn-block.btn-primary</code> above the tabs list and add an id of <code>#nav-tabs-wrapper</code> to the tabs list for the dropdown to work.
                     <pre>
                         <code class="language-html" data-lang="html">
@@ -59,11 +59,11 @@
                     </pre>
                 </div>
                 <div role="tabpanel" class="tab-pane fade" id="vtab2">
-                    <h3>Tab 2</h3>
+                    <h3>Vehicle Application</h3>
                     <p> Mauris imperdiet dignissim ante, in efficitur mauris elementum sed. Cras vulputate malesuada magna. Morbi tincidunt eros a dui cursus, vitae dignissim nulla scelerisque. Duis pharetra scelerisque mi vel luctus. Cras eu purus efficitur, blandit nisi id, fringilla nulla.</p>
                 </div>
                 <div role="tabpanel" class="tab-pane fade in" id="vtab3">
-                    <h3>Tab 3</h3>
+                    <h3>Renewal of Vehicle Registration</h3>
                     <p>Etiam id pharetra quam. Morbi tristique nunc vel sapien dapibus, sit amet imperdiet quam venenatis. Vestibulum et suscipit urna. Suspendisse volutpat quis est eu volutpat. Nulla non tortor venenatis turpis congue aliquet. Vivamus at elit vel massa elementum tempor sit amet sed odio. Nullam placerat, arcu sed ullamcorper ornare, erat erat placerat quam, in feugiat nulla purus in nunc. Maecenas vitae erat auctor, aliquam tellus et, vulputate eros.</p>
                 </div>
             </div>
