--- a/SignIn.html
+++ b/SignIn.html
@@ -9,38 +9,35 @@
 	<br>
   
   <!--The total thing is for sign in-->
-  <div class="container col-lg-4 col-lg-offset-4">
+  <div class="container col-sm-4 col-sm-offset-4">
   	<form class="form-horizontal">
       <fieldset>
         <legend>Sign In using your credentials</legend>
         <!--Email input-->
         <div class="form-group">
-          <label for="inputEmail" class="col-lg-4 control-label">Email</label>
-          <div class="col-lg-8">
-            <input type="text" class="form-control" id="inputEmail" placeholder="Email">
+          <label for="inputEmail" class="col-sm-4 control-label">Email</label>
+          <div class="col-sm-8">
+            <input type="text" class="form-control" id="inputEmail" placeholder="Email" required>
           </div>
         </div>
         <!--Password input-->
         <div class="form-group">
-          <label for="inputPassword" class="col-lg-4 control-label">Password</label>
-          <div class="col-lg-8">
-            <input type="password" class="form-control" id="inputPassword" placeholder="Password">
-            <div class="checkbox">
-              <label>
-                <input type="checkbox"> Checkbox
-              </label>
-            </div>
+          <label for="inputPassword" class="col-sm-4 control-label">Password</label>
+          <div class="col-sm-8">
+            <input type="password" class="form-control" id="inputPassword" placeholder="Greater than 8 characters" required pattern="\d{8}.+">
           </div>
         </div>
         <!-- Submit Button -->
         <div class="form-group">
-          <div class="col-lg-10 col-lg-offset-4">
+          <div class="col-sm-10 col-sm-offset-4">
             <button type="submit" class="btn btn-primary">Sign In</button>
           </div>
         </div>
       </fieldset>
     </form>
   </div>
+
+
 	<script src='./scripts/jquery-2.1.4.min.js'></script>
 	<script src='./scripts/bootstrap.min.js'></script>
 </body>
