--- a/Statistics.html
+++ b/Statistics.html
@@ -9,7 +9,7 @@
 	<!--This section is for main-->
 	<div class="container">
 		<div class="jumbotron">
-			Hello
+			Registration Statistics
 		</div>
 	</div>
 
