--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
 			<ul class="nav navbar-nav">
 				<li class="active"><a href="./TrackVehicle.html">Find Vehicle Details</a></li>
 				<li><a href="./LHowto.html">How to apply</a></li>
+				<li><a href="./PrintApplication.html">Print My Application</a> </li>
 			</ul>
 			<ul class="nav navbar-nav navbar-right">
 				<li><a href="./SignIn.html">SignIn</a></li>
