--- a/TrackVehicle.html
+++ b/TrackVehicle.html
@@ -1,17 +1,15 @@
 <html>
 <head>
     <link rel = "stylesheet" type="text/css" href ="./styles/bootstrap.min.css" />
-	<meta prop="./images/NewLogo.jpg" itemprop="image">
 	<title>Track the vehicle</title>
 </head>
 <body>
 	<!-- This part is for navigation bar-->
 
 	<!--This part is for vehicle registration form-->
-	<div class="container col-lg-8 col-lg-offset-4">
+	<div class="container col-sm-4 col-sm-offset-4">
 		<form action="" method="POST" role="form" class="col-lg-6">
 			<legend>Track the Vehicle</legend>
-		
 			<div class="form-group">
 				<label for="">Registration Number:</label>
 				<input type="text" class="form-control" id="" placeholder="Enter vehicle reg no">
@@ -21,8 +19,6 @@
 				<input type="text" class="form-control" id="" placeholder="Enter vehicle reg no">
 			</div>
 
-			
-		
 			<button type="submit" class="btn btn-primary">Submit</button>
 		</form>
 	</div>
