--- a/index.html
+++ b/index.html
@@ -24,13 +24,14 @@
 				<li class="active"><a href="./TrackVehicle.html">Find Vehicle Details</a></li>
 				<li><a href="./LHowto.html">How to apply</a></li>
 				<li><a href="./ApplyOnline.html">Apply Online</a></li>
-				<li><a href="./PrintApplication.html">Print My Application</a> </li>
+				<li><a href="./ApplicationStatus.html">Check Application Status</a> </li>
 			</ul>
 			<ul class="nav navbar-nav navbar-right">
 				<li><a href="./SignIn.html">SignIn</a></li>
 				<li class="dropdown">
 					<a href="#" class="dropdown-toggle" data-toggle="dropdown">More <b class="caret"></b></a>
 					<ul class="dropdown-menu">
+						<li><a href="./PrintApplication.html">Print My Application</a> </li>
 						<li><a href="./Statistics.html">Registration Statistics</a></li>
 						<li><a href="./Aboutus.php">About us</a></li>
 						<li><a href="./dfd.html">DFD</a></li>
