--- a/SubmitSuccess.html
+++ b/SubmitSuccess.html
@@ -7,12 +7,15 @@
 	<!--This section is for navbar-->
 
 	<!--This section is for main-->
-	<div class="container">
-		<div class="jumbotron">
-			Registration Statistics
+	<h2>
+		<div class="container">
+			Congrats! Your form has been successfully submitted!!!<br><br>
 		</div>
-	</div>
-
+		<div class="container">
+			Your Applicant Id is :<br><br>
+			Click Here to <a href="">Print the application form</a>
+		</div>
+	</h2>
 	<script src='./scripts/jquery-2.1.4.min.js'></script>
 	<script src='./scripts/bootstrap.min.js'></script>
 </body>
